--- a/visual studio/consoleDropBox.vcxproj
+++ b/visual studio/consoleDropBox.vcxproj
@@ -81,6 +81,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <LibraryPath>D:\consoleDropBox;$(LibraryPath)</LibraryPath>
+    <ExecutablePath>D:\consoleDropBox;$(ExecutablePath)</ExecutablePath>
+    <ReferencePath>D:\consoleDropBox;$(ReferencePath)</ReferencePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
