--- a/visual studio/consoleDropBox.vcxproj.filters
+++ b/visual studio/consoleDropBox.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\src\hash.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\list.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\main.hpp">
