--- a/visual studio/consoleDropBox.vcxproj.filters
+++ b/visual studio/consoleDropBox.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="..\src\list.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\remove.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\mkdir.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\main.hpp">
