--- a/visual studio/consoleDropBox.vcxproj.filters
+++ b/visual studio/consoleDropBox.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="..\src\mkdir.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\utils.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\move_cp.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\main.hpp">
